webscaff changelog
==================


Unreleased
----------
+ 'cache_init' now just empties cache directory by default.
+ 'info' now prints out current user information.
* Bootstrap spooler directory with right permissions.


v0.1.0 [2020-02-16]
-------------------
+ Basic functionality.