@@ -4,11 +4,16 @@ from . import fs
 from ..sys import fs as sys_fs
 from ..utils import link_config
 
+LETSENCRYPT_DIR = '/etc/letsencrypt'
+
 
 def bootstrap(ctx):
     """Bootstraps Certbot for the project."""
     fs.create_dir(ctx, ctx.paths.remote.project.state.certbot)
     project_name = ctx.project.name
+
+    # Prepare directories in /etc/letsencrypt/
+    ctx.sudo('certbot', warn=True)
 
     # Link a deploy hook, to allow project user access to it.
     link_config(
@@ -16,7 +21,7 @@ def bootstrap(ctx):
         title='certbot hook',
         name_local=project_name + '-certbot-hook.sh',
         name_remote=project_name,
-        dir_remote_confs=Path('/etc/letsencrypt/renewal-hooks/deploy/')
+        dir_remote_confs=Path(f'{LETSENCRYPT_DIR}/renewal-hooks/deploy/')
     )
 
     get_certificate(ctx)
@@ -29,6 +34,7 @@ def get_certificate(ctx):
 
     """
     project = ctx.project
+    group = ctx.project.group
     domain = project.domain
     email = project.email or ''
     webroot = ctx.paths.remote.project.state.certbot
@@ -42,13 +48,25 @@ def get_certificate(ctx):
 
     ctx.sudo(command)
 
+    # Set access for
+    for realm in ['archive', 'live']:
+        sys_fs.setfacl(
+            ctx,
+            path=f'{LETSENCRYPT_DIR}/{realm}/',
+            acl=f'g:{group}:--x', modify=True)
+
+        sys_fs.setfacl(
+            ctx,
+            path=f'{LETSENCRYPT_DIR}/{realm}/{domain}/',
+            acl=f'g:{group}:r-x', modify=True)
+
 
 def dump(ctx, target_dir):
     """Dumps Certbot related stuff into a target directory."""
 
     sys_fs.gzip_dir(
         ctx,
-        '/etc/letsencrypt',
+        LETSENCRYPT_DIR,
         target_dir,
         do_sudo=True
     )
@@ -60,6 +78,6 @@ def restore(ctx, source_dir):
     sys_fs.gzip_extract(
         ctx,
         archive=source_dir / 'certbot.tar.gz',
-        target_dir='/etc/letsencrypt',
+        target_dir=LETSENCRYPT_DIR,
         do_sudo=True
     )
